Aktualisierte Main und GUI Anfänge